# fragforce.org

./: .coveragerc  DEVELOPMENT.md  Dockerfile  Dockerfile.beat  Dockerfile.web  Dockerfile.worker  Pipfile  README.md  docker-compose.yml  env.sample  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: aevum-dev-images.yaml  codeql.yaml  coverage.yaml  dev-images.yaml  django-tests.yaml  events-images.yaml  prod-images.yaml  sonar.yaml  sync-dev-to-master.yaml
dev/: check-requirements.sh  coverage.sh  init.sh  lint.sh  logs.sh  makemigrations.sh  migrate.sh  pip-compile.sh  pr.sh  reset.sh  runtests.sh  shell.sh  start.sh  update.sh
eventer/: admin.py  igdb.py  models.py  schedule.py  slot_generator.py  tasks.py  tests.py  urls.py  views.py
eventer/migrations/: 0002_initial.py  0003_game_igdb_fields.py  0004_game_igdb_cache_fields.py  0005_game_status_choices_and_fields.py  0006_event_timezone.py  0007_game_remove_flags.py  0008_team_remove_team_info.py  0009_alter_event_timezone.py  0010_signup_slot_models.py  0010_slot_config_and_templates.py  0011_event_signup_flags.py  0012_event_public_flag.py  0013_schedule_slot_and_published_flag.py  0014_eventrole_color.py  0015_event_coordinator_schedule_permission.py  0016_eventscheduleslot_add_game.py  0017_event_schedule_multi_assignment.py  0018_rename_eventscheduleslot_to_eventscheduleassignment.py  0019_igdb_game_fields.py  0020_remove_game_slug.py  0021_game_search_igdb_permission.py  0022_remove_game_name_unique.py  0023_game_multiplayer_max_override.py  0024_seed_superstream_eventroles.py  0025_eventrole_multi_assign.py  0026_eventrole_multi_assign_data.py  0027_eventrole_display_order.py  0028_eventrole_display_order_data.py  0029_eventrole_game_selection_fields.py  0030_eventrole_game_selection_data.py  0031_eventrole_show_fundraising_url.py  0032_eventrole_show_fundraising_url_data.py  0033_slot_groups.py  0034_slot_groups_seed.py  0035_eventrole_show_stream_commands.py  0036_eventrole_show_stream_commands_data.py  0037_eventrole_show_notes.py  0038_eventrole_show_notes_data.py
evtsignup/: admin.py  apps.py  models.py  pipeline.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
evtsignup/migrations/: 0002_initial.py  0003_discordeventuser_discord_display_name.py  0003_remove_discordeventuser.py  0004_signup_form_fields.py  0005_remove_hour_default.py  0006_remove_salesforceeventuser.py  0007_remove_interest_level.py  0008_game_interest_add_role_nullable.py  0009_game_interest_default_role_to_participant.py  0010_game_interest_role_non_nullable.py  0011_url_resolution_attempts.py  0012_eventavailabilityhour.py  0013_migrate_availability_data.py  0014_drop_eventavailabilityinterest.py  0015_eventinterestnote.py  0016_migrate_notes_data.py  0017_drop_notes_columns.py
extralifeapi/: base.py  participants.py  teams.py  tests.py
ffbot/: __init__.py  apps.py  models.py  tests.py  utils.py
ffdiscord/: admin.py  apps.py  models.py  tasks.py  tests.py  utils.py  validators.py
ffdiscord/migrations/: 0001_initial.py  0002_discordrolemapping_grants_staff_access.py
ffdonations/: admin.py  ctx.py  helpers.py  models.py  tests.py  urls.py  utils.py
ffdonations/tasks/: teams.py  (+4 more)
fforg/: celery.py  permissions.py  rdbs.py  redisdb.py  settings.py  test_runner.py  tests.py  urls.py
ffoverlay/: urls.py
ffsite/: apps.py  ctx.py  tests.py  urls.py
ffstream/: admin.py  models.py  tests.py  urls.py  views.py  wordlist.py
(+64 files in other folders)
