[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fragforce-org"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "ipython",
    "psycopg2-binary",
    "gunicorn",
    "requests[security]",
    "beautifulsoup4",
    "lxml",
    "passlib",
    "celery[redis]>=5.2",
    "redis>=2.10.3,<5",
    "boto",
    "dj-database-url>=3.0",
    "django-redis-cache>=2.1",
    "hiredis",
    "memoize",
    "django>=5.2",
    "protobuf",
    "six",
    "whitenoise",
    "django-oauth-toolkit>=3.0",
    "django-workflow-engine",
    "social-auth-app-django>=5.9",
    "py-cord>=2,<3",
    "django-markdownify",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pyflakes",
    "coverage",
    "unittest-xml-reporting",
]

[tool.pip-tools]
generate-hashes = true
strip-extras = false

# To regenerate lockfiles:
#   pip-compile pyproject.toml -o requirements.txt --generate-hashes --no-upgrade
#   pip-compile pyproject.toml --extra dev -o requirements-dev.txt --generate-hashes --no-upgrade --allow-unsafe
# (--allow-unsafe pins pip and setuptools in dev only, not needed in production)
